--- a/templates/master.html
+++ b/templates/master.html
@@ -3,7 +3,7 @@
 {% get_current_language as LANGUAGE_CODE %}
 
 <!DOCTYPE html>
-<html lang="{% LANGUAGE_CODE %}">
+<html lang="{{ LANGUAGE_CODE }}">
 
   <head>
     <meta charset="utf8">
@@ -14,7 +14,7 @@
   </head>
 
   <body>
-    
+
     <header>
       {% include "parts/main-navigation.html" %}
     </header>
