--- a/templates/parts/main-navigation.html
+++ b/templates/parts/main-navigation.html
@@ -19,20 +19,20 @@
         <li><a href="/me"></a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-            {% user.username %}
+            {{ user.username }}
             <span class="caret"></span>
           </a>
           <ul class="dropdown-menu">
             <li><a href="#">Account</a></li>
             <li><a href="#">Settings</a></li>
             <li role="separator" class="divider"></li>
-            <li><a href="/logout">Log Out</a></li>
+            <li><a href="/accounts/logout">Log Out</a></li>
           </ul>
         </li>
       </ul>
     {% else %}
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="/login">Log In</a></li>
+        <li><a href="/accounts/login">Log In</a></li>
       </ul>
     {% endif %}
 
