--- a/templates/parts/main-navigation.html
+++ b/templates/parts/main-navigation.html
@@ -19,7 +19,7 @@
         <li><a href="/me"></a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-            {{ user.username }}
+            {{ user.email }}
             <span class="caret"></span>
           </a>
           <ul class="dropdown-menu">
