--- a/templates/parts/footer.html
+++ b/templates/parts/footer.html
@@ -1,6 +1,8 @@
 <div class='row'>
-  <p class='col-lg-12 text-center'>
+  <div class='col-lg-12'>
     <hr />
-    Minimail &ndash; Made with &hearts; &ndash; 2016
-  </p>
+    <p class='text-center'>
+      Minimail &ndash; Made with &hearts; &ndash; 2016
+    </p>
+  </div>
 </div>
