--- a/templates/parts/main-navigation.html
+++ b/templates/parts/main-navigation.html
@@ -1,7 +1,7 @@
 {% load i18n %} 
 <nav class="navbar navbar-default">
 
-  <div class="container-fluid">
+  <div class="container">
 
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
@@ -32,11 +32,11 @@
         </li>
       </ul>
     {% else %}
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="/accounts/login">{% trans "Log In" %}</a></li>
-      </ul>
+      <div class="nav navbar-nav navbar-right">
+        <a class='btn btn-default navbar-btn' href="/accounts/login">{% trans "Log In" %}</a>
+      </div>
     {% endif %}
 
-  </div><!-- /.container-fluid -->
+  </div><!-- close .container -->
 
 </nav>
