Add jquery lib.

--- a/templates/master.html
+++ b/templates/master.html
@@ -29,6 +29,7 @@
       {% include "parts/footer.html" %}
     </footer>
 
+    <script src='{% static "js/jquery-3.1.0.js" %}'></script>
     <script src='{% static "js/bootstrap.min.js" %}'></script>
 
   </body>
