--- a/templates/parts/main-navigation.html
+++ b/templates/parts/main-navigation.html
@@ -1,4 +1,4 @@
-{% load i18n %} 
+{% load i18n %}
 <nav class="navbar navbar-default">
 
   <div class="container-fluid">
@@ -24,7 +24,7 @@
             <span class="caret"></span>
           </a>
           <ul class="dropdown-menu">
-            <li><a href="#">{% trans "Account" %}</a></li>
+            <li><a href="{% url 'user_account' %}">{% trans "Account" %}</a></li>
             <li><a href="#">{% trans "Settings" %}</a></li>
             <li role="separator" class="divider"></li>
             <li><a href="/accounts/logout">{% trans "Log Out" %}</a></li>
