--- a/templates/master.html
+++ b/templates/master.html
@@ -31,6 +31,15 @@
 
     <script src='{% static "js/jquery-3.1.0.js" %}'></script>
     <script src='{% static "js/bootstrap.min.js" %}'></script>
+    <script src='{% static "js/gravatar.js" %}'></script>
+    <script>
+      jQuery(document).ready(function() {
+        var email = $('#gravatar_picture').data('email')
+        if (!email)
+          return
+        $('#gravatar_picture').attr('src',gravatar(email, {size: 30}))
+      })
+    </script>
 
   </body>
 
