--- a/templates/parts/main-navigation.html
+++ b/templates/parts/main-navigation.html
@@ -20,7 +20,7 @@
         <li><a href="/me"></a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-            {{ user.email }}
+            <img src="http://placehold.it/20x20" data-email="{{user.email}}" id="gravatar_picture" class="img-circle special-img" style="float:left; margin-right: 5px; margin-top:-5px"> {{ user.email }}
             <span class="caret"></span>
           </a>
           <ul class="dropdown-menu">
