Implemented template detail view. Improve template add.

--- a/template_management/templates/template_detail.html
+++ b/template_management/templates/template_detail.html
@@ -1,1 +1,94 @@
-hey
+{% extends 'master.html' %}
+{% load i18n %}
+
+
+{% block title %}
+  Template "{{ template.name }}"
+{% endblock %}
+
+
+{% block content %}
+
+  <div class='row'>
+    <div class='col-lg-6 col-sm-6'>
+      <h2>
+        <a href='{% url 'template-list' %}'>{% trans "Templates" %}</a>
+        / {{ template.name }}
+      </h2>
+    </div>
+  </div>
+
+  <hr />
+
+  <div class='row'>
+
+      <div class='col-lg-8 col-sm-6'>
+        <div class='panel panel-default'>
+          <div class='preview' style='position: relative; min-height: 600px; height:auto; background: #f9f9f9; overflow: hidden;'>
+            <iframe style='border: 0; position: absolute; top: 0; bottom: 0; left: 0; right: 0; z-index: 10; transform: scale(0.90); transform-origin: 0 0; height: 112%; width: 112%;' src='/templates/{{template.id}}/preview'> </iframe>
+            <div class='cover' style='position: absolute; top: 0; bottom: 0; left: 0; right: 0; z-index: 100;'></div>
+          </div>
+        </div>
+      </div>
+
+      <div class='col-lg-4 col-sm-6'>
+
+          <div class='container-fluid'>
+            <ul class='list-unstyled'>
+              <li>
+                <a class='text-primary' href='/templates/{{template.id}}/edit'>{% trans 'Create a campaign with this template' %}</a>
+              </li>
+              <li>
+                <a class='text-primary' href='/templates/{{template.id}}/preview' target='_blank'>{% trans 'Open template preview' %}</a>
+              </li>
+              <li>
+                <a class='text-primary' href='/templates/{{template.id}}/edit'>{% trans 'Edit' %}</a>
+              </li>
+              <li>
+                <a href='/templates/{{template.id}}/delete' data-toggle="modal" data-target="#template-delete-confirmation" class='text-danger'>{% trans 'Delete' %}</a>
+              </li>
+            </ul>
+            <hr />
+            <ul class='list-unstyled'>
+              <li>
+                <small class='text-muted'>{% trans "created:" %} {{ template.created }}</small>
+              </li>
+              <li>
+                <small class='text-muted'>{% trans "last edited:" %} {{ template.edited}}</small>
+              </li>
+            </p>
+          </div>
+        </div>
+      </div>
+
+  </div> 
+
+  <!-- Modal for delete deletion confirmation -->
+  <div id='template-delete-confirmation' class="modal" tabindex="-1" role="dialog">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <form method='post' action='{% url 'template-delete' template.id %}'>
+          {% csrf_token %}
+          <div class="modal-header"> 
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <h4 class="modal-title">Please confirm template deletion</h4>
+          </div>
+          <div class="modal-body">
+            <p>
+              <strong>Are you sure you can to delete this template?</strong>
+            </p>
+            <ul>
+              <li>Both the HTML and the text version will be deleted.</li>
+              <li>All campaigns sent with this template will NOT be deleted.</li>
+            </ul>
+          </div>
+          <div class="modal-footer">
+            <a href='javascript:void(0)' type="button" class="btn btn-default" data-dismiss="modal">No, keep it</a>
+            <button type="submit" class="btn btn-danger">Yes, delete it</button>
+          </div>
+        </form>
+      </div><!-- /.modal-content -->
+    </div><!-- /.modal-dialog -->
+  </div><!-- /.modal -->
+
+{% endblock %}
