--- a/templates/parts/main-navigation.html
+++ b/templates/parts/main-navigation.html
@@ -10,9 +10,9 @@
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <ul class="nav navbar-nav">
-      <li class="active"><a href="/campaigns">{% trans "Campaigns" %}</a></li>
-      <li class="active"><a href="/subscribers">{% trans "Subscribers" %}</a></li>
-      <li class="active"><a href="/templates">{% trans "Templates" %}</a></li>
+      <li><a href="/campaigns">{% trans "Campaigns" %}</a></li>
+      <li><a href="/subscribers">{% trans "Subscribers" %}</a></li>
+      <li><a href="/templates">{% trans "Templates" %}</a></li>
     </ul>
 
     {% if user.is_authenticated %}
