--- a/template_management/templates/template_list.html
+++ b/template_management/templates/template_list.html
@@ -1,6 +1,12 @@
 {% extends 'master.html' %}
 {% load i18n %}
 
+
+{% block title %}
+  Templates
+{% endblock %}
+
+
 {% block content %}
 
   <div class='row'>
@@ -16,7 +22,7 @@
     </div>
   </div>
 
-  <br />
+  <hr />
 
   <div class='row'>
 
@@ -26,10 +32,12 @@
         <div class='panel panel-default'>
           <div class='preview' style='position: relative; min-height: 300px; background: #f9f9f9; overflow: hidden;'>
             <iframe style='border: 0; position: absolute; top: 0; bottom: 0; left: 0; right: 0; z-index: 10; transform: scale(0.50); transform-origin: 0 0; height: 200%; width: 200%;' width='100%' height='300px' src='/templates/{{template.id}}/preview'> </iframe>
-            <div class='cover' style='position: absolute; top: 0; bottom: 0; left: 0; right: 0; z-index: 100;'></div>
+            <a href='{% url 'template-detail' template.id %}' class='cover' style='position: absolute; top: 0; bottom: 0; left: 0; right: 0; z-index: 100;'></a>
           </div>
           <div class='container-fluid'>
-            <h3>{{ template.name }}</h3>
+            <h3>
+              <a href='{% url 'template-detail' template.id %}'>{{ template.name }}</a>
+            </h3>
             <ul class='list-unstyled'>
               <li>
                 <a class='text-primary' href='/templates/{{template.id}}/edit'>{% trans 'Create a campaign with this template' %}</a>
@@ -41,10 +49,7 @@
                 <a class='text-primary' href='/templates/{{template.id}}/edit'>{% trans 'Edit' %}</a>
               </li>
               <li>
-                <form method='post' action='/templates/{{template.id}}/delete'>
-                  {% csrf_token %}
-                  <button class='btn btn-link' href='/templates/{{template.id}}/delete'>{% trans 'Delete' %}</button>
-                </form>
+                <a href='/templates/{{template.id}}/delete' data-toggle="modal" data-target="#template-delete-confirmation" class='text-danger'>{% trans 'Delete' %}</a>
               </li>
             </ul>
             <p>
@@ -61,5 +66,33 @@
     {% endfor %}
 
   </div> 
+
+  <!-- Modal for delete deletion confirmation -->
+  <div id='template-delete-confirmation' class="modal" tabindex="-1" role="dialog">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <form method='post' action='/'>
+          {% csrf_token %}
+          <div class="modal-header"> 
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <h4 class="modal-title">Please confirm template deletion</h4>
+          </div>
+          <div class="modal-body">
+            <p>
+              <strong>Are you sure you can to delete this template?</strong>
+            </p>
+            <ul>
+              <li>Both the HTML and the text version will be deleted.</li>
+              <li>All campaigns sent with this template will NOT be deleted.</li>
+            </ul>
+          </div>
+          <div class="modal-footer">
+            <a href='javascript:void(0)' type="button" class="btn btn-default" data-dismiss="modal">No, keep it</a>
+            <button type="button" class="btn btn-danger">Yes, delete it</button>
+          </div>
+        </form>
+      </div><!-- /.modal-content -->
+    </div><!-- /.modal-dialog -->
+  </div><!-- /.modal -->
 
 {% endblock %}
