--- a/templates/master.html
+++ b/templates/master.html
@@ -7,10 +7,11 @@
 
   <head>
     <meta charset="utf8">
-    <title>{% block title %}Minimail{% endblock %}</title>
+    <title>{% block title %}Email marketing for developers{% endblock %} &middot; Minimail</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <link rel="stylesheet" href="{% static "css/bootstrap.min.css" %}">
     <link rel="canonical" href="http://minimail.fullweb.io">
+    {% block styles %}{% endblock %}
   </head>
 
   <body>
@@ -22,9 +23,22 @@
     {% endblock %}
 
     <main class='container'>
+
+      {% block notifs %}
+        {% if messages %}
+          {% for message in messages %}
+            <p class="alert alert-dismissable {% if message.tags %}alert-{{ message.tags }}"{% endif %}>
+              <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+              {{ message }}
+            </p>
+          {% endfor %}
+        {% endif %}
+      {% endblock %}
+
       {% block content %}
         <pre>Empty page</pre>
       {% endblock %}
+
     </main>
 
     <footer class='container'>
@@ -42,6 +56,7 @@
         $('#gravatar_picture').attr('src',gravatar(email, {size: 30}))
       })
     </script>
+    {% block script %}{% endblock %}
 
   </body>
 
