Update master template.

--- a/templates/master.html
+++ b/templates/master.html
@@ -36,7 +36,7 @@
       {% endblock %}
 
       {% block content %}
-        <pre>Empty page</pre>
+        <pre>Homepage default content. Override with {% verbatim %}{% block content %}{% endverbatim %} in your template.</pre>
       {% endblock %}
 
     </main>
