--- a/template_management/templates/template_edit.html
+++ b/template_management/templates/template_edit.html
@@ -84,9 +84,9 @@
 
 
 {% block script %}
-  <script src='{% static "js/codemirror.js" %}'></script>
-  <script src='{% static "js/xml.js" %}'></script>
-  <script src='{% static "js/htmlmixed.js" %}'></script>
+  <script src='{% static "js/vendor/codemirror.js" %}'></script>
+  <script src='{% static "js/vendor/xml.js" %}'></script>
+  <script src='{% static "js/vendor/htmlmixed.js" %}'></script>
   <script>
     // Enable the tab navigation
     $('#newTemplateTabs a').click(function (ev) {
