--- a/templates/master.html
+++ b/templates/master.html
@@ -45,9 +45,9 @@
       {% include "parts/footer.html" %}
     </footer>
 
-    <script src='{% static "js/jquery-3.1.0.js" %}'></script>
-    <script src='{% static "js/bootstrap.min.js" %}'></script>
-    <script src='{% static "js/gravatar.js" %}'></script>
+    <script src='{% static "js/vendor/jquery-3.1.0.js" %}'></script>
+    <script src='{% static "js/vendor/bootstrap.min.js" %}'></script>
+    <script src='{% static "js/vendor/gravatar.js" %}'></script>
     <script>
       jQuery(document).ready(function() {
         var email = $('#gravatar_picture').data('email')
