--- a/subscriber_management/templates/subscriber_list.html
+++ b/subscriber_management/templates/subscriber_list.html
@@ -1,5 +1,6 @@
-{% extends "master.html" %}
+{% extends 'master.html' %}
 {% load i18n %}
+
 
 {% block content %}
 <legend>{{ list.name }} subscribers</legend>
