--- a/subscriber_management/templates/subscriber_list.html
+++ b/subscriber_management/templates/subscriber_list.html
@@ -24,7 +24,7 @@
           <td>{{ item.email }}</td>
           <td>{{ item.first_name }}</td>
           <td>{{ item.last_name }}</td>
-          <td>{{ item.timezone }}</td>
+          <td>{{ item.timezone_str }}</td>
           <td>{{ item.created }}</td>
           <td>
             <button
