--- a/template_management/templates/template_list.html
+++ b/template_management/templates/template_list.html
@@ -11,10 +11,10 @@
 
   <div class='row'>
     <div class='col-lg-6 col-sm-6'>
-      <h2>
+      <h3>
         {% trans "Templates" %}
-        <small>{% trans "Total of" %} {{ object_list|length }} {% trans "template"%}{% trans "template"|pluralize %}</small>
-      </h2>
+        <small>{{ object_list|length }} {% trans "template"%}{% trans "template"|pluralize %}</small>
+      </h3>
     </div>
     <div class='col-lg-6 col-sm-6 text-right'>
       <br />
