--- a/campaign_management/templates/campaign_list.html
+++ b/campaign_management/templates/campaign_list.html
@@ -1,6 +1,7 @@
 {% extends 'master.html' %}
 {% load staticfiles %}
 {% load i18n %}
+{% load humanize %}
 
 
 {% block title %}
@@ -34,7 +35,7 @@
           <p class="list-group-item-text">
           <strong>Subject:</strong> {{ campaign.email_subject }}
           <br />
-          <strong>Sent to:</strong> {{ campaign.email_list.count_susbscribers }} subscribers
+          <strong>Sent to:</strong> {{ campaign.email_list.count_susbscribers|intcomma }} subscriber{{ campaign.email_list.count_susbscribers|pluralize }}
           <br />
           <small class='text-muted'>created: {{ campaign.created }}</small>
           </p>
