--- a/subscriber_management/templates/list_list.html
+++ b/subscriber_management/templates/list_list.html
@@ -1,5 +1,6 @@
 {% extends "master.html" %}
 {% load i18n %}
+{% load humanize %}
 
 
 {% block title %}
@@ -26,10 +27,13 @@
   {% for item in  object_list %}
     <div class="list-group">
       <a href="{% url 'subscriber-management-list-subscribers' item.uuid %}" class="list-group-item">
-        <h4 class='list-group-item-heading'>{{ item.name }}</h4>
+        <h4 class='list-group-item-heading'>
+          {{ item.name }}
+          <small>
+            {{ item.count_susbscribers|intcomma }} subscriber{{item.count_susbscribers|pluralize}}
+          </small>
+        </h4>
         <p class="list-group-item-text">
-          <span class="badge right">{%trans 'Subscribers' %}: {{ item.count_susbscribers }}</span>
-          <br />
           <small class='text-muted'>created: {{ item.created }}</small>
         </p>
       </a>
