--- a/campaign_management/templates/campaign_new_or_edit.html
+++ b/campaign_management/templates/campaign_new_or_edit.html
@@ -13,7 +13,12 @@
     <div class='col-lg-12'>
       <h3>
         <a href='{% url 'campaign-list' %}'>{% trans "Campaigns" %}</a>
-        / New campaign
+        {% if campaign %}
+        / <a href='{% url 'campaign-detail' campaign.id %}'>{{campaign.name}}</a>
+        / Edit
+        {% else %}
+        / {% trans "New campaign" %}
+        {% endif %}
       </h3>
     </div>
   </div>
@@ -29,17 +34,25 @@
         <h3>1. Email Setup</h3>
         <div class="form-group">
           <label for="{{form.name.auto_id}}">Campaign name:</label>
-          <input id="{{form.name.auto_id}}" name="{{form.name.name}}" class='form-control' tabindex='1' maxlength='{{form.email_from_email.field.max_length}}' />
+          <input id="{{form.name.auto_id}}" name="{{form.name.name}}"
+                 class='form-control' tabindex='1'
+                 maxlength='{{form.name.field.max_length}}'
+                 value='{{form.name.value|default:""}}'/>
           <div class='help-block'>Visible only to you.</div>
         </div>
         <div class="form-group">
           <label for="{{form.email_subject.auto_id}}" class='control-label'>Email subject:</label>
-          <input id="{{form.email_subject.auto_id}}" name="{{form.email_subject.name}}" class='form-control' tabindex='2' maxlength='{{form.email_from_email.field.max_length}}' />
+          <input id="{{form.email_subject.auto_id}}"
+                 name="{{form.email_subject.name}}" class='form-control' tabindex='2'
+                 maxlength='{{form.email_subject.field.max_length}}'
+                 value='{{form.email_subject.value|default:""}}'/>
           <div class='help-block'>Max 150 characters. You can you emojis too.</div>
         </div>
         <div class="form-group">
           <label for="{{form.email_from_name.auto_id}}" class='control-label'>From name:</label>
-          <input id="{{form.email_from_name.auto_id}}" name="{{form.email_from_name.name}}" class='form-control' tabindex='3' maxlength='{{form.email_from_email.field.max_length}}' />
+          <input id="{{form.email_from_name.auto_id}}" name="{{form.email_from_name.name}}" class='form-control'
+                 tabindex='3' maxlength='{{form.email_from_name.field.max_length}}'
+                 value='{{form.email_from_name.value|default:""}}'/>
           <div class='help-block'>The name your recipients will see in the <code>From:</code> field.</div>
         </div>
         <div class="form-group">
@@ -49,7 +62,8 @@
                  name="{{form.email_from_email.name}}"
                  class='form-control'
                  tabindex='3'
-                 maxlength='{{form.email_from_email.field.max_length}}'/>
+                 maxlength='{{form.email_from_email.field.max_length}}'
+                 value='{{form.email_from_email.value|default:""}}'/>
           <div class='help-block'>The email address your recipients will see in the <code>From:</code> field.</div>
         </div>
 
@@ -69,8 +83,8 @@
             <label for="{{form.email_list.auto_id}}">Select a list:</label>
             <select id="{{form.email_list.auto_id}}" name="{{form.email_list.name}}" class="form-control">
             {% for list in lists %}
-            <option value='{{list.id}}'>
-              {{list.name}} &ndash; {{list.count_susbscribers}} subscriber{{list.count_susbscribers|pluralize}}
+            <option value='{{list.id}}' {% if list.id == campaign.email_list.id %}selected{%endif %}>
+              {{list.name}} &mdash; {{list.count_susbscribers}} {% trans 'subscriber' %}{{list.count_susbscribers|pluralize}}
             </option>
             {% endfor %}
             </select>
@@ -91,7 +105,9 @@
             <label for="{{form.email_template.auto_id}}">Select a template:</label>
             <select id="{{form.email_template.auto_id}}" name="{{form.email_template.name}}" class="form-control">
             {% for template in templates %}
-            <option value='{{template.id}}'>{{template.name}}</option>
+            <option value='{{template.id}}' {% if template.id == campaign.email_template.id %}selected{%endif %}>
+              {{template.name}}
+            </option>
             {% endfor %}
             </select>
             <div class='help-block'>Or <a href='{% url 'template-new' %}'> create a new template</a>.</div>
@@ -106,7 +122,7 @@
           <br />
           <br />
           <br />
-          <button class='btn btn-lg btn-success center-block'>Review campaign</button>
+          <button class='btn btn-lg btn-success center-block'>Save and review campaign</button>
         </div>
       </div>
 
