Update page title and title width.

--- a/campaign_management/templates/campaign_new_or_edit.html
+++ b/campaign_management/templates/campaign_new_or_edit.html
@@ -4,7 +4,11 @@
 
 
 {% block title %}
-  New campaign
+  {% if campaign %}
+  {% trans "Editing campaign" %} "{{campaign.name}}"
+  {% else %}
+    {% trans "New campaign" %}
+  {% endif %}
 {% endblock %}
 
 {% block content %}
