--- a/campaign_management/templates/campaign_detail.html
+++ b/campaign_management/templates/campaign_detail.html
@@ -10,7 +10,7 @@
 {% block content %}
 
   <div class='row'>
-    <div class='col-lg-6 col-sm-6'>
+    <div class='col-lg-12'>
       <h3>
         <a href='{% url 'campaign-list' %}'>{% trans "Campaigns" %}</a>
         / {{ campaign.name }}
