--- a/campaign_management/templates/campaign_review.html
+++ b/campaign_management/templates/campaign_review.html
@@ -11,7 +11,7 @@
 {% block content %}
 
   <div class='row'>
-    <div class='col-lg-6 col-sm-6'>
+    <div class='col-lg-12'>
       <h3>
         <a href='{% url 'campaign-list' %}'>{% trans "Campaigns" %}</a>
         / <a href='{% url 'campaign-detail' campaign.id %}'>{{ campaign.name }}</a>
