--- a/campaign_management/templates/campaign_review.html
+++ b/campaign_management/templates/campaign_review.html
@@ -95,7 +95,7 @@
         {% trans 'Schedule'%}
       </a>
 
-      <a href='#' class='btn btn-danger'>
+      <a href='{% url "campaign-send" campaign.pk %}' class='btn btn-danger'>
         {% trans 'Send now to'%}
         {{ campaign.email_list.count_subscribers|intcomma }} {% trans 'subscriber' %}{{campaign.email_list.count_subscribers|pluralize}}
       </a>
