--- a/subscriber_management/templates/subscriber_list.html
+++ b/subscriber_management/templates/subscriber_list.html
@@ -3,7 +3,7 @@
 
 
 {% block content %}
-<legend>{{ list.name }} subscribers</legend>
+<legend>{{ list.name }} subscribers ({{total_count}})</legend>
 {% if not object_list %}
   <p>{% trans 'No subscribers' %}</p>
 {% else %}
@@ -44,6 +44,34 @@
       {% endfor %}
     </tbody>
   <table>
+
+  {% if object_list.has_other_pages %}
+    <nav aria-label="Page navigation">
+      <ul class="pagination">
+        {% if object_list.has_previous %}
+        <li>
+          <a href="{% url 'subscriber-management-list-subscribers' list.uuid %}?page={{object_list.previous_page_number}}" aria-label="Previous">
+            <span aria-hidden="true">&laquo;</span>
+          </a>
+        </li>
+        {% endif %}
+        {% for page in page_nums %}
+          {% if object_list.number == page %}
+          <li class="active"><a href="{% url 'subscriber-management-list-subscribers' list.uuid %}?page={{page}}">{{page}}</a></li>
+          {% else %}
+          <li><a href="{% url 'subscriber-management-list-subscribers' list.uuid %}?page={{page}}">{{page}}</a></li>
+          {% endif %}
+        {% endfor %}
+        {% if object_list.has_next %}
+        <li>
+          <a href="{% url 'subscriber-management-list-subscribers' list.uuid %}?page={{object_list.next_page_number}}" aria-label="Next">
+            <span aria-hidden="true">&raquo;</span>
+          </a>
+        </li>
+        {% endif %}
+      </ul>
+    </nav>
+  {% endif %}
 {% endif %}
 
 <a class="btn btn-primary" href="{% url 'subscriber-management-list-import' list.uuid %}">{% trans 'Import CSV' %}</a>
