--- a/campaign_management/templates/campaign_review.html
+++ b/campaign_management/templates/campaign_review.html
@@ -75,7 +75,7 @@
             <span class="input-group-addon" id="sizing-addon1">
               Send a test email to
             </span>
-            <input type="email" name="email" class="form-control" placeholder="your email..." value="{{user.email}}" />
+            <input type="text" name="email" class="form-control" placeholder="your email..." value="{{user.email}}" maxlength=150/>
             <span class="input-group-btn">
               <button type="submit" class="btn btn-default">Send</button>
             </span>
